Cleaned up documentation and comments.
* Added license comment.
* Added link to DOSBox, which enables to run ASCII-Scramble in platforms other than DOS and Windows.
* Cleaned up typos.

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="ASCII-Scramble" default="site" basedir=".">
     <description>
-        Shot'em up for MS DOS text mode using only ASCII characters
+        Shoot'em up for MS DOS text mode using only ASCII characters
     </description>
 
   <property name="ascscram.zip" location="site/ASCSCRAM.ZIP"/>
