--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
   </target>
 
   <target name="zip" depends="compile">
-    <zip destfile="${ascscram.zip}" basedir="." includes="ASCSCRAM.EXE, README.TXT, LICENSE.TXT" />
+    <zip destfile="${ascscram.zip}" basedir="." includes="ASCSCRAM.EXE, ASCSCRAM.BAT, README.TXT, LICENSE.TXT" />
   </target>
 
   <target name="site" depends="zip">
